projects/ng-components/src/assets/styles/view-layout.css
@layer components {

  .view-container {
    @apply mt-8 sm:mt-5 flex flex-col;
  }

  .view-container-fluid {
    @apply sm:px-0;
  }

  .view-layout-paddings {
    @apply py-6 sm:py-10;
  }

  .view-layout-title-container {
    @apply md:hidden flex flex-row justify-start;
  }

  .view-layout-title-container-inner {
    @apply flex-1 justify-start items-center;
  }

  .view-layout-title-container-sm {
    @apply hidden md:flex justify-between items-center;
  }

  .view-layout-title-container-sm-inner {
    @apply flex-1 justify-start;
  }

  .title-icon {
    @apply text-xl text-white font-thin mr-1;
  }

  .title-icon-sm {
    @apply text-2xl text-white font-thin mr-2 mt-1;
  }

  .view-layout-title-busy {
    @apply animate-pulse inline text-xl text-gray-200;
  }

  .view-layout-title {
    @apply inline text-xl text-white;
  }

  .view-layout-title-busy-sm {
    @apply animate-pulse inline text-3xl text-gray-200;
  }

  .view-layout-title-sm {
    @apply inline text-3xl text-white;
  }

  .meta-container {
    @apply flex space-x-2;
  }

  .meta-container-inner {
    @apply mt-2 flex items-center justify-end text-xs text-white;
  }

  .meta-icon {
    @apply text-sm text-gray-400 mr-1;
  }

  .meta-container-sm {
    @apply flex flex-wrap sm:flex-row space-x-2;
  }

  .meta-container-sm-inner {
    @apply flex flex-wrap mt-2 sm:flex-row space-x-2 text-white;
  }

  .meta-icon-sm {
    @apply text-sm text-gray-400 mr-1;
  }

  .meta-text {
    @apply text-white text-xs;
  }

  .search-container {
    @apply relative text-gray-400 focus-within:text-gray-600 ml-2 hover:shadow-sm hover:bg-gray-900;
  }

  .search-input {
    @apply block w-60 bg-gray-50 rounded-sm text-sm text-gray-900 placeholder-gray-500 outline-none;
  }
}

